version2/infra/k8s-dev/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: butik.dev
      http:
        paths:
          - path: /api/authentication
            pathType: Prefix
            backend:
              service:
                name: auth-srv
                port:
                  number: 3000
        # - path: /api/users/?(.*)
        #   pathType: Prefix
        #     backend:
        #       serviceName: auth-srv
        #       servicePort: 3000
          # - path: /api/payments/?(.*)
          #   backend:
          #     serviceName: payments-srv
          #     servicePort: 3000
          # - path: /api/tickets/?(.*)
          #   backend:
          #     serviceName: tickets-srv
          #     servicePort: 3000
          # - path: /api/orders/?(.*)
          #   backend:
          #     serviceName: orders-srv
          #     servicePort: 3000
          # - path: /
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: client-srv
          #       port:
          #         number: 3000
